--- a/til/_config.yml
+++ b/til/_config.yml
@@ -1,12 +1,34 @@
-title: TIL by sa-ny
-description: My learning journey - one day at a time
+# _config.yml
+remote_theme: jekyll/minima
+title: TIL by Sany
+description: WHAT I LEARN IN A DAY
 baseurl: "/til"
 url: "https://sa-ny.github.io"
 github_username: sa-ny
+
+# Build settings
 markdown: kramdown
 plugins:
   - jekyll-feed
   - jekyll-sitemap
+  - jekyll-remote-theme
+
+# Theme settings
+minima:
+  skin: classic
+  
+# Collections
 collections:
   tags:
     output: true
+
+defaults:
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+  - scope:
+      path: ""
+    values:
+      layout: "default"
